-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0, 5.11.1, 5.13.1
-
None
-
03f1c6e3ed01f8270463ab8aa4afb4f7c2321cdb (qt/tqtc-qttools/6.1.0)
-
DaVinci sprint 1
See that the documentation for http://doc.qt.io/qt-5/qmetatype.html#qRegisterMetaType-2 mentions T but it doesn't appear in the method signature.
- depends on
-
QTBUG-81208 Understand requirements for including template signatures in documentation
-
- Closed
-
| For Gerrit Dashboard: QTBUG-17456 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 286421,6 | qdoc: Teach QDoc to output function and class template parameters | 5.15 | qt/qttools | Status: MERGED | +2 | 0 |