tests/auto/qdoc/generatedoutput/testtemplate.cpp
@@ -1,6 +1,6 @@
 /****************************************************************************
 **
-** Copyright (C) 2019 The Qt Company Ltd.
+** Copyright (C) 2020 The Qt Company Ltd.
 ** Contact: https://www.qt.io/licensing/
 **
 ** This file is part of the tools applications of the Qt Toolkit.
@@ -25,35 +25,23 @@
 ** $QT_END_LICENSE$
 **
 ****************************************************************************/
-#pragma once
-#define QDOCTEST_MACRO test
-#define QDOCTEST_MACRO2(x) (x) < 0 ? 0 : (x))
 
-namespace TestQDoc {
+#include "testtemplate.h"
 
-class Test {
-public:
-    int someFunction(int v);
-    void someFunctionDefaultArg(int i, bool b);
-    void obsoleteMember();
-    void anotherObsoleteMember();
-    void deprecatedMember();
-    inline void inlineFunction() {};
-    virtual void virtualFun();
+/*!
+    \class Foo
+    \inmodule TestCPP
+    \brief Class template.
+*/
 
-protected:
-    void overload() {}
-    void overload(bool b) { if (!b) return; }
-#ifdef test_template
-    template <typename T1, typename T2> void funcTemplate(T1 a, T2 b) {
-        a = b;
-    }
-#endif
-};
+/*!
+    \class Bar
+    \inmodule TestCPP
+    \brief Another class template.
+*/
 
-class TestDerived : public Test {
-public:
-    void virtualFun() override;
-};
-
-} // namespace TestQDoc
+/*!
+    \class Baz
+    \inmodule TestCPP
+    \brief Class template template.
+*/
